--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -11,7 +11,9 @@ $icon-font-path: "../bower_components/bootstrap-sass-official/vendor/assets/font
 @import "base/layout";
 
 @import "app/utils";
-@import "app/fontrun";
-@import "app/fr-ui";
-@import "app/template";
+
+// Components
+
+@import "../components/ui/ui";
+@import "../components/home/home";
 @import "app/test-cards";
