--- a/app/styles/themes/theme-agnostic.scss
+++ b/app/styles/themes/theme-agnostic.scss
@@ -360,7 +360,7 @@ body {
 		color: var(--secondary-color);
 		background-color: transparent;
 		border-bottom: 4px solid var(--secondary-color);
-		@include transitionNormal(all);
+		transition: all 0.5s ease;
 
 		&:hover, &:focus {
 			background-color: var(--secondary-color);
