--- a/app/styles/themes/theme-lean.scss
+++ b/app/styles/themes/theme-lean.scss
@@ -1,16 +1,17 @@
 @import "compass";
-@import "../variables/colorPalette";
-@import "../variables/mixins";
+
+$theme-gray-light: #EEE;
+$theme-gray-dark: #1E1E1E;
 
 .site__wrapper {
-	background-color: $lightGray;
+	background-color: $theme-gray-light;
 }
 
 // Fonts
 
 .site__wrapper {
 	h1 {
-		color: $mainColor;
+		color: var(--primary-color);
 		font-weight: 700;
 	}
 
@@ -23,180 +24,215 @@
 		font-weight: 700;
 		text-align: center;
 		text-transform: uppercase;
-		&:before {
-			position: absolute;
-			content: "";
-			top: -1px;
-			left: 50%;
-			margin-left: -38px;
-			width: 76px;
-			height: 1px;
-			background-color: #FFF;
-		}
+
+		&:before,
 		&:after {
 			position: absolute;
 			content: "";
-			bottom: -1px;
 			left: 50%;
 			margin-left: -38px;
 			width: 76px;
 			height: 1px;
 			background-color: #FFF;
 		}
+
+		&:before {
+			top: -1px;
+		}
+
+		&:after {
+			bottom: -1px;
+		}
 	}
 
-	#history p {
-	  -webkit-column-count: 4;
-	  -moz-column-count: 4;
-	  column-count: 4;
-	}
-}
-// Layout
+	// Layout
 
-.site__wrapper {
-	.titleWrapper {
+	.section__header {
 		position: relative;
 		padding-top: 120px;
 		padding-bottom: 130px;
 		background: #1a1a1a url("http://lorempixel.com/g/1920/600/") no-repeat scroll center;
+
 		&:before {
 			position: absolute;
 			content: "";
 			margin-top: -120px;
 			width: 100%;
 			height: 100%;
-			background-color: rgba($darkGray, 0.4);
+			background-color: rgba($theme-gray-dark, 0.4);
+		}
+	}
+
+	.section__body {
+		margin-top: 25px;
+		margin-bottom: 60px;
+	}
+
+	.section__button {
+		padding: 6px 20px;
+		font-size: 18px;
+		color: var(--primary-color);
+		font-weight: 700;
+		text-transform: uppercase;
+		background-color: transparent;
+		border: 2px solid var(--primary-color);
+		transition: all 0.4s ease-in-out;
+
+		&:hover {
+			color: #FFF;
+			background-color: var(--primary-color);
+		}
+	}
+
+	.section__reload {
+		top: auto;
+		bottom: -50px;
+		right: 50%;
+		margin-right: -20px;
+		color: #FFF;
+	}
+
+	footer {
+		padding-top: 10px;
+		padding-bottom: 10px;
+		background-color: var(--primary-color);
+
+		p {
+			color: #FFF;
 		}
 	}
 }
+
 // fontVersus
 
-.site__wrapper {
-	#fontsVersus {
-		text-transform: uppercase;
-		.vsTag {
-			margin-bottom: 20px;
-		}
-		.vsTagInner {
+#fonts-versus {
+	text-transform: uppercase;
+
+	.versus__tag {
+		margin-bottom: 20px;
+
+		span {
+			display: inline-block;
 			padding: 5px 15px;
 			border: 2px solid black;
 		}
 	}
 }
-// Header
-.site__wrapper {
-	#header {
-		background: #1a1a1a url("http://lorempixel.com/g/1920/600/nature/") no-repeat fixed center;
-		background-size: cover;
-		border-bottom: 10px solid $fillColor;
-		.headerTag {
-			.headerTagInner {
-				padding: 20px;
-				border: 3px solid $mainColor;
-				@include transitionSlow();
-				&:hover {
-					background-color: $mainColor;
-					h1, h3 {
-						color: #FFF;
-					}
-					h1 {
-						border-bottom: 1px solid #FFF;
-					}
-				}
+
+// Nav bar
+
+#home-nav {
+	background: $theme-gray-dark;
+
+	.nav__logo {
+		a {
+			color: var(--primary-color);
+
+			&:hover {
+				background-color: #FFF;
 			}
-			h1 {
-				padding-bottom: 5px;
-				border-bottom: 1px solid $mainColor;
-				@include transitionSlow();
-			}
-			h3 {
-				color: $mainColor;
-				text-transform: uppercase;
-				letter-spacing: 3px;
-				@include transitionSlow();
-			}
-		}
-		h1 {
-			font-weight: 700;
-			text-transform: uppercase;
-		}
-		p {
-			margin-top: 20px;
-			margin-bottom: 15px;
-			max-width: 50%;
-			color: #FFF;
-		}
-		.headerOverlay {
-			background-color: rgba($fillColor, 0.3);
 		}
 	}
 
-	button {
-		padding: 6px 20px;
-		font-family: 'secondaryFont';
-		font-size: 18px;
-		color: $secondaryColor;
-		font-weight: 700;
-		text-transform: uppercase;
-		background-color: transparent;
-		border: 2px solid $secondaryColor;
-		transition: all 0.4s ease-in-out;
-		&:hover {
-			color: #FFF;
-			background-color: $secondaryColor;
-		}
+	li a {
+		color: #FFF;
 	}
 }
 
-// Skills
 
-.site__wrapper {
-	#skills {
-		.col-sm-4 {
-			margin-top: 15px;
+// Header
+
+#home-header {
+	background-color: var(--tertiary-color);
+	background-size: cover;
+	text-align: center;
+
+	.headerTag {
+		.headerTagInner {
+			padding: 20px;
+			border: 3px solid var(--primary-color);
+			transition: all 0.5s ease;
+
+			&:hover {
+				background-color: var(--primary-color);
+
+				h1,
+				h3 {
+					color: #FFF;
+				}
+
+				h1 {
+					border-bottom: 1px solid #FFF;
+				}
+			}
+		}
+
+		h1 {
+			padding-bottom: 5px;
+			border-bottom: 1px solid var(--primary-color);
+			transition: all 0.5s ease;
+		}
+
+		h3 {
+			color: var(--primary-color);
+			text-transform: uppercase;
+			letter-spacing: 3px;
+			transition: all 0.5s ease;
 		}
 	}
 
-	.skillBox {
+	h1 {
+		color: #FFF;
+		font-weight: 700;
+		text-transform: uppercase;
+	}
+
+	p {
+		margin: 20px auto 15px;
+		max-width: 50%;
+		color: #FFF;
+	}
+
+	.header__overlay {
+		background-color: var(--tertiary-color);
+		opacity: 0.3;
+	}
+}
+
+
+// Skills
+
+#home-skills {
+
+	.skills__item {
 		color: #FFF;
 		border-radius: 7px;
 		text-align: center;
+
 		h3 {
-			margin: 0;
-			padding: 50px 15px 15px;
-			color: $secondaryColor;
+			padding: 15px;
+			color: var(--secondary-color);
 		}
+
 		.bottomWrapper {
-			border-top: 1px solid $fillColor;
-			border-bottom: 1px solid $fillColor;
+			border-top: 1px solid var(--tertiary-color);
+			border-bottom: 1px solid var(--tertiary-color);
 		}
+
 		p {
 			margin: 0;
 			padding: 15px;
 			position: relative;
-			color: $fillColor;
-		}
-		button {
-			margin-bottom: 10px;
-			padding: 0;
-			font-family: 'secondaryFont';
-			font-size: 18px;
-			color: $darkGray;
-			font-weight: 300;
-			text-transform: lowercase;
-			background-color: transparent;
-			border: none;
-			&:hover {
-				color: lighten($secondaryColor, 10%);
-			}
+			color: var(--tertiary-color);
 		}
 	}
 }
+
 
 // history
 
 .site__wrapper {
-	#history {
+	#home-history {
 		margin-top: 15px;
 		margin-bottom: 15px;
 		h2 {
@@ -209,76 +245,48 @@
 		}
 	}
 }
+
 
 // randomWords
 
-.site__wrapper {
-	#randomWords {
-		margin-top: 15px;
-		margin-bottom: 15px;
-		.wrapper {
-			.row {
-				margin-left: 0;
-				margin-right: 0;
-			}
-		}
-		h2 {
-			display: block;
-			margin-top: 0;
-			margin-bottom: 0;
-		}
-		p {
-			padding: 15px;
-		}
-	}
-}
 
 // aboutUs
 
-.site__wrapper {
-	#aboutUs {
-		margin-top: 15px;
-		padding-top: 20px;
-		padding-bottom: 30px;
-		background-color: $fillColor;
-		.aboutUsTag {
-			margin-top: 80px;
-		}
-		.aboutUsBig {
-			font-family: 'mainFont';
+#home-team {
+	padding-top: 20px;
+	padding-bottom: 20px;
+	background-color: var(--secondary-color);
+
+	.team__tag {
+		margin-top: 80px;
+
+		h1 {
 			font-size: 76px;
 			font-weight: 700;
-			color: $mainColor;
+			color: var(--primary-color);
 			line-height: 0.8;
 		}
-		h3 {
-			margin-top: 5px;
-			margin-bottom: 25px;
-			font-family: 'mainFont';
-			font-weight: 700;
-			color: $contrastColorLight;
-		}
-		h5 {
-			margin-bottom: 2px;
-			font-family: 'secondaryFont';
-			font-weight: 300;
-			color: $contrastColorLight;
-		}
 	}
-}
 
-// Footer
+	h4 {
+		margin-top: 5px;
+		color: #FFF;
+	}
 
-.site__wrapper {
-	footer {
-		padding-top: 10px;
-		padding-bottom: 10px;
-		background-color: $mainColor;
-		p {
-			color: #FFF;
-		}
-		.copyRight {
-			text-align: right;
+	h3 {
+		margin-top: 5px;
+		font-weight: 700;
+		color: $theme-gray-light;
+	}
+
+	h5 {
+		font-weight: 300;
+		color: $theme-gray-light;
+	}
+
+	li {
+		&:not(:first-child) {
+			margin-top: 15px;
 		}
 	}
 }
