Adds modal component. Adds ui component. Adds ESC event to close modals. CSS refactor

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -15,5 +15,6 @@ $icon-font-path: "../bower_components/bootstrap-sass-official/vendor/assets/font
 // Components
 
 @import "../components/ui/ui";
+@import "../components/modal/modal";
 @import "../components/home/home";
 @import "app/test-cards";
