--- a/app/components/ui/ui.html
+++ b/app/components/ui/ui.html
@@ -1,96 +1,96 @@
-<div ng-controller="MenuCtrl as menu" class="fr-ui ui"
-	ng-hide="menu.hideUi">
+<div class="fr-ui ui"
+	ng-hide="$ctrl.hideUi">
 	<span class="fr-side-menu__open"
-		ng-click="controls.showSideMenu = true">
+		ng-click="$root.controls.showSideMenu = true">
 		<i class="fa fa-cogs"></i>
 	</span>
 
 	<div class="fr-theme-select">
-		<p class="fr-theme-select__title" ng-click="menu.showThemesMenu = !menu.showThemesMenu">{{ themes.current }} <i class="fa fa-caret-down"></i></p>
-		<ul ng-show="menu.showThemesMenu" ng-click="menu.showThemesMenu = false">
-			<li ng-repeat="theme in menu.premadeThemes" ng-click="themes.current = theme.name">{{ theme.name }}</li>
+		<p class="fr-theme-select__title" ng-click="$ctrl.showThemesMenu = !$ctrl.showThemesMenu">{{ $root.themes.current }} <i class="fa fa-caret-down"></i></p>
+		<ul ng-show="$ctrl.showThemesMenu" ng-click="$ctrl.showThemesMenu = false">
+			<li ng-repeat="theme in $ctrl.premadeThemes" ng-click="$root.themes.current = theme.name">{{ theme.name }}</li>
 		</ul>
 	</div>
 
 	<nav class="fr-side-menu"
-		ng-class="{ 'side-menu--show' : controls.showSideMenu }">
+		ng-class="{ 'side-menu--show' : $root.controls.showSideMenu }">
 
 		<header>
 			<img class="side-menu__logo" src="images/fontrun-logo-white.svg" alt="fontRun logo white"
-				ng-click="menu.showAboutModal = true">
+				ng-click="$ctrl.showAboutModal = true">
 
 			<div class="side-menu__view">
 				<p class="-h6">Current view</p>
 				<div>
 					<a ng-href="#!/"
-						ng-class="{ 'side-menu__view-item' : view.current === 'theme' }">
+						ng-class="{ 'side-menu__view-item' : $root.view.current === 'theme' }">
 						<span>Theme</span>
 					</a>
 					<a ng-href="#!/test"
-						ng-class="{ 'side-menu__view-item' : view.current === 'card' }">
+						ng-class="{ 'side-menu__view-item' : $root.view.current === 'card' }">
 						<span>Cards</span>
 					</a>
 				</div>
 			</div>
 
 			<span class="side-menu__close"
-				ng-click="controls.showSideMenu = false">
+				ng-click="$root.controls.showSideMenu = false">
 				<i class="fa fa-close"></i>
 			</span>
 		</header>
 
 		<ul class="side-menu__content">
 			<li class="side-menu__font-select">
-				<p class="-h2 side-menu__title side-menu__title--collapsable" ng-click="menu.hideSelectedFonts = !menu.hideSelectedFonts">Selected fonts <span><i class="fa" ng-class="'fa-chevron-' + (menu.hideSelectedFonts ? 'down' : 'up')"></i></span></p>
-				<ul ng-hide="menu.hideSelectedFonts">
+				<p class="-h2 side-menu__title side-menu__title--collapsable" ng-click="$ctrl.hideSelectedFonts = !$ctrl.hideSelectedFonts">Selected fonts <span><i class="fa" ng-class="'fa-chevron-' + ($ctrl.hideSelectedFonts ? 'down' : 'up')"></i></span></p>
+				<ul ng-hide="$ctrl.hideSelectedFonts">
 					<li>
 						<label for="main-font">
 							<p class="side-menu__title -h6">MAIN FONT</p>
-							<input class="side-menu__input -h2" type="text" id="main-font" ng-model="fonts.primary">
+							<input class="side-menu__input -h2" type="text" id="main-font" ng-model="$root.fonts.primary">
 						</label>
 					</li>
 					<span class="side-menu__font-switch"
-						ng-click="menu.switchFonts()">
+						ng-click="$ctrl.switchFonts()">
 						<i class="fa fa-exchange fa-rotate-90"></i>
 					</span>
 					<li>
 						<label for="secondary-font">
 							<p class="side-menu__title -h6">SECONDARY FONT</p>
-							<input class="side-menu__input -h2" type="text" id="secondary-font" ng-model="fonts.secondary">
+							<input class="side-menu__input -h2" type="text" id="secondary-font" ng-model="$root.fonts.secondary">
 						</label>
 					</li>
 				</ul>
 			</li>
 
 			<li>
-				<p class="-h2 side-menu__title side-menu__title--collapsable" ng-click="menu.hideColorPallete = !menu.hideColorPallete">Color pallette <span><i class="fa" ng-class="'fa-chevron-' + (menu.hideColorPallete ? 'down' : 'up')"></i></span></p>
+				<p class="-h2 side-menu__title side-menu__title--collapsable" ng-click="$ctrl.hideColorPallete = !$ctrl.hideColorPallete">Color pallette <span><i class="fa" ng-class="'fa-chevron-' + ($ctrl.hideColorPallete ? 'down' : 'up')"></i></span></p>
 				<ul class="side-menu__selected-colors"
-					ng-hide="menu.hideColorPallete">
+					ng-hide="$ctrl.hideColorPallete">
 					<li>
-						<div ng-style="{ 'background-color': '#'+colors.primary }"></div>
+						<div ng-style="{ 'background-color': '#' + $root.colors.primary }"></div>
 						<span>#</span>
-						<input class="side-menu__input side-menu__input--color" type="text" ng-model="colors.primary">
+						<input class="side-menu__input side-menu__input--color" type="text" ng-model="$root.colors.primary">
 					</li>
 					<li>
-						<div ng-style="{ 'background-color': '#'+colors.secondary }"></div>
+						<div ng-style="{ 'background-color': '#' + $root.colors.secondary }"></div>
 						<span>#</span>
-						<input class="side-menu__input side-menu__input--color" type="text" ng-model="colors.secondary">
+						<input class="side-menu__input side-menu__input--color" type="text" ng-model="$root.colors.secondary">
 					</li>
 					<li>
-						<div ng-style="{ 'background-color': '#'+colors.tertiary }"></div>
+						<div ng-style="{ 'background-color': '#' + $root.colors.tertiary }"></div>
 						<span>#</span>
-						<input class="side-menu__input side-menu__input--color" type="text" ng-model="colors.tertiary">
+						<input class="side-menu__input side-menu__input--color" type="text" ng-model="$root.colors.tertiary">
 					</li>
 				</ul>
 			</li>
 
 			<li class="ui-schemes">
-				<p class="-h2 side-menu__title side-menu__title--collapsable" ng-click="menu.hideSchemes = !menu.hideSchemes">Schemes <span><i class="fa" ng-class="'fa-chevron-' + (menu.hideSchemes ? 'down' : 'up')"></i></span></p>
+				<p class="-h2 side-menu__title side-menu__title--collapsable" ng-click="$ctrl.hideSchemes = !$ctrl.hideSchemes">Schemes <span><i class="fa" ng-class="'fa-chevron-' + ($ctrl.hideSchemes ? 'down' : 'up')"></i></span></p>
 				<ul class="ui-schemes__list"
-					ng-hide="menu.hideSchemes">
+					ng-hide="$ctrl.hideSchemes">
 					<li class="ui-schemes__scheme"
-						ng-click="menu.setScheme( scheme )"
-						ng-repeat="scheme in menu.schemes">
+						ng-click="$ctrl.setScheme( scheme )"
+						ng-repeat="scheme in $ctrl.schemes">
 						<p class="ui-schemes__font -h6">{{ scheme.primaryFont }}</p>
 						<p class="ui-schemes__font -h6">{{ scheme.secondaryFont }}</p>
 						<ul class="ui-schemes__colors">
@@ -98,29 +98,29 @@
 							<li ng-style="{ 'background-color' : '#' + scheme.secondaryColor}"></li>
 							<li ng-style="{ 'background-color' : '#' + scheme.tertiaryColor}"></li>
 						</ul>
-						<span class="ui-schemes__delete" ng-click="menu.deleteScheme( $index )"><i class="fa fa-close"></i></span>
+						<span class="ui-schemes__delete" ng-click="$ctrl.deleteScheme( $index )"><i class="fa fa-close"></i></span>
 					</li>
 
 					<li class="ui-schemes__scheme"
-						ng-click="menu.saveCurrentScheme()">
+						ng-click="$ctrl.saveCurrentScheme()">
 						<span class="ui-schemes__add"><i class="fa fa-plus"></i></span>
 					</li>
 				</ul>
 			</li>
 
 			<li>
-				<p class="-h2 side-menu__title side-menu__title--collapsable" ng-click="menu.hideActions = !menu.hideActions">Actions <span><i class="fa" ng-class="'fa-chevron-' + (menu.hideActions ? 'down' : 'up')"></i></span></p>
+				<p class="-h2 side-menu__title side-menu__title--collapsable" ng-click="$ctrl.hideActions = !$ctrl.hideActions">Actions <span><i class="fa" ng-class="'fa-chevron-' + ($ctrl.hideActions ? 'down' : 'up')"></i></span></p>
 				<ul class="ui__actions"
-					ng-hide="menu.hideActions">
-					<li ng-click="menu.getShareableUrl()">
+					ng-hide="$ctrl.hideActions">
+					<li ng-click="$ctrl.getShareableUrl()">
 						<span><i class="fa fa-share"></i></span>
 						<p>Share current scheme</p>
 					</li>
-					<li ng-click="menu.getShareableSchemes()">
+					<li ng-click="$ctrl.getShareableSchemes()">
 						<span><i class="fa fa-list-ul"></i></span>
 						<p>Share saved schemes</p>
 					</li>
-					<li ng-click="menu.showAddSchemesModal = true">
+					<li ng-click="$ctrl.showAddSchemesModal = true">
 						<span><i class="fa fa-list-ul"></i></span>
 						<p>Add schemes</p>
 					</li>
@@ -137,46 +137,25 @@
 		</footer>
 	</nav>
 
-	<div class="fr-modal" ng-class="{ 'modal--show' : menu.showAboutModal }">
-		<div class="modal__container">
-			<header>
-				<p class="-h1">About FontRun</p>
-				<span class="modal__close"
-					ng-click="menu.showAboutModal = false">
-					<i class="fa fa-close"></i>
-				</span>
-			</header>
-			<div class="modal__body">
-				<p>FontRun is a tool to quickly try, test and share different fonts and different colors with preloaded themes that simulate the latest trends in design.</p>
-				<p class="utils__mt--md">In under 5 minutes get an idea if the chosen fonts and color palette work well together so you can start creating your own designs in your own design software, or directly code the website/application you are building.</p>
-				<p class="-h4 utils__mt--lg">Hotkeys</p>
-				<p class="utils__mt--sm">Q - Open/Close side panel</p>
-				<p class="utils__mt--sm">H - Show/Hide UI</p>
-				<p class="utils__mt--sm">T - Next theme</p>
-				<p class="utils__mt--sm">V - Switch views</p>
-				<p class="utils__mt--sm">F - Switch fonts</p>
-				<p class="utils__mt--sm">1/9 - Select scheme</p>
-			</div>
-		</div>
-	</div>
+	<modal title="About FontRun" show-modal="$ctrl.showAboutModal">
+		<p>FontRun is a tool to quickly try, test and share different fonts and different colors with preloaded themes that simulate the latest trends in design.</p>
+		<p class="utils__mt--md">In under 5 minutes get an idea if the chosen fonts and color palette work well together so you can start creating your own designs in your own design software, or directly code the website/application you are building.</p>
+		<p class="-h4 utils__mt--lg">Hotkeys</p>
+		<p class="utils__mt--sm">Q - Open/Close side panel</p>
+		<p class="utils__mt--sm">H - Show/Hide UI</p>
+		<p class="utils__mt--sm">T - Next theme</p>
+		<p class="utils__mt--sm">V - Switch views</p>
+		<p class="utils__mt--sm">F - Switch fonts</p>
+		<p class="utils__mt--sm">1/9 - Select scheme</p>
+	</modal>
 
-	<div class="fr-modal" ng-class="{ 'modal--show' : menu.showAddSchemesModal }">
-		<div class="modal__container">
-			<header>
-				<p class="-h1">Add schemes</p>
-				<span class="modal__close"
-					ng-click="menu.showAddSchemesModal = false">
-					<i class="fa fa-close"></i>
-				</span>
-			</header>
-			<div class="modal__body">
-				<p>Paste the code below and press the button</p>
-				<textarea name="name" rows="8" cols="80" ng-model="menu.schemesString"></textarea>
-				<span class="fr-button utils__mt--lg"
-					ng-click="menu.addSchemes()">
-					<em>Add schemes</em>
-				</span>
-			</div>
-		</div>
-	</div>
+	<modal title="Add schemes" show-modal="$ctrl.showAddSchemesModal">
+		<p>Paste the code below and press the button</p>
+		<textarea name="name" rows="8" cols="80" ng-model="$ctrl.schemesString"></textarea>
+		<span class="fr-button utils__mt--lg"
+			ng-click="$ctrl.addSchemes()">
+			<em>Add schemes</em>
+		</span>
+	</modal>
+
 </div>
