--- a/components/home/partials/home-prices.html
+++ b/components/home/partials/home-prices.html
@@ -1,93 +1,95 @@
 <section id="home-prices">
 	<div class="section__header">
-		<div class="container">
+		<div class="section__container">
 			<span class="section__badge"></span>
 			<h2 class="section__title">Our prices</h2>
 		</div>
 	</div>
 
-	<div class="container">
-		<ul class="section__body row">
-			<li class="col-sm-3">
-				<div class="prices__option">
-					<h3>Simple <br>plan</h3>
-					<h4>Your name</h4>
-					<p class="prices__tag"><span>$</span> 127</p>
-					<div class="prices__list">
-						<ul>
-							<li class="font__secondary">First feature</li>
-							<li class="font__secondary">Important stuff</li>
-							<li class="font__secondary">Longer availability</li>
-							<li class="font__secondary">Let's you be awesome</li>
-							<li class="font__secondary">Infernal strategy</li>
-						</ul>
-						<span class="section__button">
-							<span class="font__secondary">Purchase</span>
-						</span>
+	<div class="section__container">
+	<div class="section__body">
+			<ul class="section__row">
+				<li class="section__column section__column--3">
+					<div class="prices__option">
+						<h3>Simple <br>plan</h3>
+						<h4>Your name</h4>
+						<p class="prices__tag"><span>$</span> 127</p>
+						<div class="prices__list">
+							<ul>
+								<li class="font__secondary">First feature</li>
+								<li class="font__secondary">Important stuff</li>
+								<li class="font__secondary">Longer availability</li>
+								<li class="font__secondary">Let's you be awesome</li>
+								<li class="font__secondary">Infernal strategy</li>
+							</ul>
+							<span class="section__button">
+								<span class="font__secondary">Purchase</span>
+							</span>
+						</div>
 					</div>
-				</div>
-			</li>
+				</li>
 
-			<li class="col-sm-3">
-				<div class="prices__option">
-					<h3>Complex <br>plan</h3>
-					<h4>Your name</h4>
-					<p class="prices__tag"><span>$</span> 309</p>
-					<div class="prices__list">
-						<ul>
-							<li class="font__secondary">First feature</li>
-							<li class="font__secondary">Important stuff</li>
-							<li class="font__secondary">Longer availability</li>
-							<li class="font__secondary">Let's you be awesome</li>
-							<li class="font__secondary">Infernal strategy</li>
-						</ul>
-						<span class="section__button">
-							<span class="font__secondary">Purchase</span>
-						</span>
+				<li class="section__column section__column--3">
+					<div class="prices__option">
+						<h3>Complex <br>plan</h3>
+						<h4>Your name</h4>
+						<p class="prices__tag"><span>$</span> 309</p>
+						<div class="prices__list">
+							<ul>
+								<li class="font__secondary">First feature</li>
+								<li class="font__secondary">Important stuff</li>
+								<li class="font__secondary">Longer availability</li>
+								<li class="font__secondary">Let's you be awesome</li>
+								<li class="font__secondary">Infernal strategy</li>
+							</ul>
+							<span class="section__button">
+								<span class="font__secondary">Purchase</span>
+							</span>
+						</div>
 					</div>
-				</div>
-			</li>
+				</li>
 
-			<li class="col-sm-3">
-				<div class="prices__option">
-					<h3>Expensive <br>plan</h3>
-					<h4>Your name</h4>
-					<p class="prices__tag"><span>$</span> 548</p>
-					<div class="prices__list">
-						<ul>
-							<li class="font__secondary">First feature</li>
-							<li class="font__secondary">Important stuff</li>
-							<li class="font__secondary">Longer availability</li>
-							<li class="font__secondary">Let's you be awesome</li>
-							<li class="font__secondary">Infernal strategy</li>
-						</ul>
-						<span class="section__button">
-							<span class="font__secondary">Purchase</span>
-						</span>
+				<li class="section__column section__column--3">
+					<div class="prices__option">
+						<h3>Expensive <br>plan</h3>
+						<h4>Your name</h4>
+						<p class="prices__tag"><span>$</span> 548</p>
+						<div class="prices__list">
+							<ul>
+								<li class="font__secondary">First feature</li>
+								<li class="font__secondary">Important stuff</li>
+								<li class="font__secondary">Longer availability</li>
+								<li class="font__secondary">Let's you be awesome</li>
+								<li class="font__secondary">Infernal strategy</li>
+							</ul>
+							<span class="section__button">
+								<span class="font__secondary">Purchase</span>
+							</span>
+						</div>
 					</div>
-				</div>
-			</li>
+				</li>
 
-			<li class="col-sm-3">
-				<div class="prices__option">
-					<h3>Oblivion <br>plan</h3>
-					<h4>Your name</h4>
-					<p class="prices__tag"><span>$</span> 666</p>
-					<div class="prices__list">
-						<ul>
-							<li class="font__secondary">First feature</li>
-							<li class="font__secondary">Important stuff</li>
-							<li class="font__secondary">Longer availability</li>
-							<li class="font__secondary">Let's you be awesome</li>
-							<li class="font__secondary">Infernal strategy</li>
-						</ul>
-						<span class="section__button">
-							<span class="font__secondary">Purchase</span>
-						</span>
+				<li class="section__column section__column--3">
+					<div class="prices__option">
+						<h3>Oblivion <br>plan</h3>
+						<h4>Your name</h4>
+						<p class="prices__tag"><span>$</span> 666</p>
+						<div class="prices__list">
+							<ul>
+								<li class="font__secondary">First feature</li>
+								<li class="font__secondary">Important stuff</li>
+								<li class="font__secondary">Longer availability</li>
+								<li class="font__secondary">Let's you be awesome</li>
+								<li class="font__secondary">Infernal strategy</li>
+							</ul>
+							<span class="section__button">
+								<span class="font__secondary">Purchase</span>
+							</span>
+						</div>
 					</div>
-				</div>
-			</li>
+				</li>
 
-		</ul>
+			</ul>
+		</div>
 	</div>
-</section> 
+</section>
