--- a/app/components/home/partials/home-contact.html
+++ b/app/components/home/partials/home-contact.html
@@ -1,14 +1,14 @@
 <section id="home-contact">
 	<div class="section__header">
-		<div class="container">
+		<div class="section__container">
 			<span class="section__badge"></span>
 			<h2 class="section__title">Contact us</h2>
 		</div>
 	</div>
-	<div class="container">
+	<div class="section__container">
 		<div class="section__body wrapper">
-			<div class="row">
-				<div class="col-sm-4">
+			<div class="section__row">
+				<div class="section__column section__column--4">
 					<div class="contact__message">
 						<h3>Leave us a message</h3>
 						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi veritatis repellat autem quam sapiente id eligendi provident possimus odio voluptatem.</p>
@@ -21,18 +21,18 @@
 						</ul>
 					</div>
 				</div>
-				<div class="col-sm-8">
-					<form action="" class="row">
-						<div class="col-sm-6">
+				<div class="section__column section__column--8">
+					<form action="" class="section__row">
+						<div class="section__column section__column--6">
 							<input name="textinput" type="text" placeholder="Your name" class="">
 						</div>
-						<div class="col-sm-6">
+						<div class="section__column section__column--6">
 							<input name="textinput" type="mail" placeholder="Your email" class="">
 						</div>
-						<div class="col-sm-12">
+						<div class="section__column section__column--12">
 							<textarea name="" id="" placeholder="Your message"></textarea>
 						</div>
-						<div class="col-sm-12">
+						<div class="section__column section__column--12">
 						 <span class="section__button">
 							<span class="font__secondary">Send</span>
 						 </span>
