--- a/app/components/home/partials/home-footer.html
+++ b/app/components/home/partials/home-footer.html
@@ -1,10 +1,10 @@
 <footer>
-	<div class="container">
-		<div class="row">
-			<div class="col-md-6 footer__copyright">
+	<div class="section__container">
+		<div class="section__row">
+			<div class="section__column section__column--6 footer__copyright">
 				<p>This site is copyrighted.</p>
 			</div>
-			<div class="col-md-6 footer__author">
+			<div class="section__column section__column--6 footer__author">
 				<p>This was designed and developed by Sebastián Holgado</p>
 			</div>
 		</div>
