--- a/app/components/home/partials/home-history.html
+++ b/app/components/home/partials/home-history.html
@@ -1,11 +1,11 @@
 <section id="home-history">
 	<div class="section__header">
-		<div class="container">
+		<div class="section__container">
 			<span class="section__badge"></span>
 			<h2 class="section__title">Our history</h2>
 		</div>
 	</div>
-	<div class="container">
+	<div class="section__container">
 		<div class="section__body">
 			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. In, corporis, laboriosam doloremque magni qui ipsum omnis possimus obcaecati quisquam autem odio iste sint at porro fugiat tenetur architecto odit quasi sed fugit consequatur eum explicabo libero nihil labore voluptatibus pariatur ex molestiae vero ratione iusto illo asperiores mollitia neque alias quia tempore enim a adipisci illum. Ad, eveniet, autem nam vitae quos sunt maxime repudiandae molestiae enim itaque doloribus reprehenderit expedita error rem sequi accusamus accusantium fuga officiis veritatis quod tenetur quae asperiores facilis totam ex aliquid cumque! Neque, alias, ad, numquam expedita pariatur vel eaque aspernatur tenetur rem velit fugiat cumque suscipit delectus ducimus blanditiis reprehenderit ex molestias quo laboriosam consequatur quas facilis nemo id minima consectetur maiores ullam harum! Porro culpa voluptatibus pariatur placeat modi saepe numquam neque laudantium. Laudantium, dignissimos, molestiae, quam architecto soluta ipsam sequi ex quos aspernatur explicabo consequuntur fuga aliquam nisi. Officiis, id, tempora!</p>
 		</div>
