--- a/app/components/home/partials/home-skill.html
+++ b/app/components/home/partials/home-skill.html
@@ -1,13 +1,13 @@
 <section id="home-skills">
 	<div class="section__header">
-		<div class="container">
+		<div class="section__container">
 			<span class="section__badge"></span>
 			<h2 class="section__title">Our skills</h2>
 		</div>
 	</div>
-	<div class="container">
-		<ul class="section__body row">
-			<li class="col-sm-4"
+	<div class="section__container">
+		<ul class="section__body section__row">
+			<li class="section__column section__column--4"
 				ng-repeat="skill in main.skills">
 				<div class="skills__item">
 					<h3 class="skills__item-title">{{ skill.title }}</h3>
