--- a/app/components/home/partials/home-team.html
+++ b/app/components/home/partials/home-team.html
@@ -1,8 +1,8 @@
 <section id="home-team">
-	<div class="container">
+	<div class="section__container">
 		<div class="wrapper">
-			<div class="row">
-				<div class="team__tag col-sm-5">
+			<div class="section__row">
+				<div class="team__tag section__column section__column--6">
 					<h1>
 						This is who we are.
 					</h1>
@@ -10,7 +10,7 @@
 						A group of dedicated people doing what we know best.
 					</h4>
 				</div>
-				<ul class="team__people col-sm-offset-1 col-sm-6">
+				<ul class="team__people section__column section__column--6">
 					<li>
 						<h5>Screenwritter</h5>
 						<h3>Johan Sebastián Bach</h3>
