--- a/app/styles/themes/theme-googly.scss
+++ b/app/styles/themes/theme-googly.scss
@@ -197,7 +197,7 @@ h2 {
 #aboutUs {
 	margin-top: 15px;
 	margin-bottom: 15px;
-	.container .wrapper{
+	.section__container .wrapper{
 		overflow: hidden;
 		padding: 15px;
 		background-color: #FFF;
