--- a/app/components/home/_home.scss
+++ b/app/components/home/_home.scss
@@ -1,317 +1,10 @@
-.site__wrapper {
-	transition: padding-left 0.5s ease;
-
-	// TODO: Delete this when not using bootstrap
-	// Bootstrap container
-	.container {
-		max-width: 100%;
-	}
-
-	&.site__wrapper--menu {
-		padding-left: 360px;
-	}
-
-	h1 {
-		font-size: 37px;
-	}
-
-	h2 {
-		font-size: 30px;
-	}
-
-	h3 {
-		font-size: 24px;
-	}
-
-	h4 {
-		font-size: 20px;
-	}
-
-	h5 {
-		font-size: 18px;
-	}
-
-	h6 {
-		font-size: 16px;
-	}
-
-	p {
-		font-size: 18px;
-	}
-
-	.section__header {
-		.container {
-			position: relative;
-		}
-	}
-
-	.section__button {
-		display: inline-block;
-		cursor: pointer;
-	}
-
-	.section__reload {
-		position: absolute;
-		top: 50%;
-		right: 15px;
-		margin-top: -20px;
-		width: 40px;
-		height: 40px;
-		font-size: 20px;
-		line-height: 40px;
-		text-align: center;
-		cursor: pointer;
-	}
-
-
-	// Footer
-
-	footer {
-		padding-top: 10px;
-		padding-bottom: 10px;
-
-		p {
-			color: #FFF;
-		}
-
-		.footer__author {
-			text-align: right;
-		}
-	}
-}
-
-
-// Fonts Versus
-
-#fonts-versus {
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	min-height: 100vh;
-
-	.versus__wrapper {
-		padding: 20px;
-	}
-
-	.versus__primary,
-	.versus__secondary,
-	.versus__tag {
-		display: block;
-		text-align: center;
-	}
-
-	.versus__primary,
-	.versus__secondary {
-		margin-top: 5px;
-		margin-bottom: 25px;
-		font-size: 15vh;
-		line-height: 1;
-	}
-
-	.versus__primary {
-		color: var(--primary-color);
-	}
-
-	.versus__secondary {
-		color: var(--secondary-color);
-	}
-
-	.versus__tag {
-		span {
-			position: relative;
-			font-family: sans-serif;
-			font-weight: 700;
-			font-size: 20px;
-			color: $darkGray;
-		}
-	}
-}
-
-
-// Nav bar
-
-#home-nav {
-	margin-bottom: 0;
-	border-radius: 0;
-	border: none;
-
-	.nav__container {
-		display: flex;
-	}
-
-	.nav__logo {
-		flex-grow: 100;
-
-		a {
-			display: inline-block;
-			padding: 0 15px;
-			font-size: 24px;
-			color: #FFF;
-			line-height: 50px;
-		}
-	}
-
-	.nav__items {
-		margin-bottom: 0;
-	}
-
-	.nav__item {
-		float: left;
-		font-size: 18px;
-
-		a {
-			display: block;
-			padding: 0 15px;
-			line-height: 50px;
-		}
-	}
-}
-
-
-// Header
-
-#home-header {
-	position: relative;
-
-	.header__overlay {
-		position: absolute;
-		top: 0;
-		left: 0;
-		width: 100%;
-		height: 100%;
-	}
-
-	.container {
-		display: -webkit-flex;
-		display: flex;
-		-webkit-align-items: center;
-		align-items: center;
-		height: 500px;
-	}
-}
-
-
-// Skills
-
-
-// History
-
-#home-history {
-	p {
-		-webkit-column-count: 4;
-		-moz-column-count: 4;
-		column-count: 4;
-	}
-}
-
-
-// Words
-
-#home-words {
-	.words__list {
-		display: -webkit-flex;
-		display: flex;
-		-webkit-flex-wrap: wrap;
-		flex-wrap: wrap;
-
-		li {
-			flex-basis: 16.66666%;
-			font-size: 20px;
-		}
-	}
-}
-
-// Team
-
-#home-team {
-	.team__tag {
-		margin-top: 80px;
-
-		.h1 {
-			font-size: 76px;
-			line-height: 1.2;
-		}
-	}
-
-	h3 {
-		margin-top: 5px;
-	}
-}
-
-
-// Prices
-
-#home-prices {
-	.prices__option {
-		text-align: center;
-	}
-
-	.prices__tag {
-		margin-bottom: 15px;
-		font-size: 50px;
-	}
-
-	ul {
-
-		li {
-			font-size: 18px;
-		}
-	}
-}
-
-// Blog
-
-#home-blog {
-	p {
-		margin-top: 15px;
-	}
-}
-
-// Contact
-
-#home-contact {
-	h3 {
-		margin-bottom: 10px;
-	}
-
-	.contact__icons {
-		margin-top: 10px;
-		display: -webkit-flex;
-		display: flex;
-
-		li {
-			width: 40px;
-			height: 40px;
-			cursor: pointer;
-			text-align: center;
-			line-height: 40px;
-
-			& + li {
-				margin-left: 15px;
-			}
-		}
-	}
-
-	input,
-	textarea {
-		border: none;
-
-		&:focus,
-		&:hover {
-			outline: none;
-			-webkit-appearance: none;
-		}
-	}
-
-	input {
-		width: 100%;
-		margin-bottom: 15px;
-	}
-
-	textarea {
-		width: 100%;
-		min-height: 120px;
-		max-width: 100%;
-		margin-bottom: 15px;
-	}
-}
+@import 'styles/home-base';
+@import 'styles/home-fonts-versus';
+@import 'styles/home-nav';
+@import 'styles/home-header';
+@import 'styles/home-history';
+@import 'styles/home-words';
+@import 'styles/home-team';
+@import 'styles/home-prices';
+@import 'styles/home-blog';
+@import 'styles/home-contact';
