--- a/app/components/ui/styles/_ui-side-menu.scss
+++ b/app/components/ui/styles/_ui-side-menu.scss
@@ -1,47 +1,3 @@
-.fr-ui {
-	.-h1, .-h2, .-h3, .-h4, .-h5, .-h6, p, li, span {
-		font-family: $fr-font-primary;
-		font-weight: 300;
-	}
-
-	.-h1 {
-		font-size: 30px;
-	}
-
-	.-h2 {
-		font-size: 26px;
-	}
-
-	.-h3 {
-		font-size: 22px;
-	}
-
-	.-h4 {
-		font-size: 20px;
-	}
-
-	.-h5 {
-		font-size: 18px;
-	}
-
-	.-h6 {
-		font-size: 14px;
-	}
-
-	p {
-		font-size: 16px;
-	}
-
-	textarea {
-		display: block;
-		width: 100%;
-		max-width: 100%;
-		padding: 10px;
-		color: #FFF;
-		background-color: $fr-color-secondary-darker;
-	}
-}
-
 .fr-side-menu__open {
 	position: fixed;
 	top: 10px;
@@ -62,7 +18,7 @@
 	}
 }
 
-.fr-side-menu {
+.ui-side-menu {
 	font-size: 12px;
 	color: #FFF;
 	position: fixed;
@@ -74,34 +30,6 @@
 	z-index: 5;
 	transition: left 0.5s ease, box-shadow 0.5s ease;
 	box-shadow: 0 0 rgba(#000, 0.4);
-
-	.side-menu__title {
-		position: relative;
-
-		&.side-menu__title--collapsable {
-			cursor: pointer;
-		}
-
-		span {
-			position: absolute;
-			top: 50%;
-			right: 0;
-			margin-top: -12px;
-			height: 24px;
-			width: 24px;
-			line-height: 24px;
-			text-align: center;
-			font-size: 18px;
-			opacity: 0;
-			transition: opacity 0.5s ease;
-		}
-
-		&:hover {
-			span {
-				opacity: 1;
-			}
-		}
-	}
 
 	&.side-menu--show {
 		left: 0;
@@ -197,16 +125,7 @@
 		}
 	}
 
-	.side-menu__input {
-		background-color: transparent;
-		border: none;
-		color: #FFF;
 
-		&:hover,
-		&:focus {
-			outline: none;
-		}
-	}
 
 	.side-menu__font-select {
 
@@ -230,7 +149,7 @@
 				background-color: #FFF;
 				color: $fr-color-secondary-darker;
 
-				.side-menu__input {
+				.ui__input {
 					color: $fr-color-secondary-darker;
 				}
 			}
@@ -241,7 +160,7 @@
 		}
 
 		label,
-		.side-menu__input {
+		.ui__input {
 			display: block;
 			margin-bottom: 0;
 			cursor: pointer;
@@ -268,13 +187,13 @@
 				background-color: #FFF;
 
 				span,
-				.side-menu__input {
+				.ui__input {
 					color: $fr-color-secondary-darker;
 				}
 			}
 
 			span,
-			.side-menu__input {
+			.ui__input {
 				transition: color 0.5s ease;
 			}
 
@@ -290,7 +209,7 @@
 				height: 100%;
 			}
 
-			.side-menu__input {
+			.ui__input {
 				font-size: 18px;
 				background-color: transparent;
 			}
