--- a/app/components/ui/ui.html
+++ b/app/components/ui/ui.html
@@ -12,7 +12,7 @@
 		</ul>
 	</div>
 
-	<nav class="fr-side-menu"
+	<nav class="ui-side-menu"
 		ng-class="{ 'side-menu--show' : $root.controls.showSideMenu }">
 
 		<header>
@@ -41,101 +41,28 @@
 
 		<ul class="side-menu__content">
 			<li class="side-menu__font-select">
-				<p class="-h2 side-menu__title side-menu__title--collapsable" ng-click="$ctrl.hideSelectedFonts = !$ctrl.hideSelectedFonts">Selected fonts <span><i class="fa" ng-class="'fa-chevron-' + ($ctrl.hideSelectedFonts ? 'down' : 'up')"></i></span></p>
-				<ul ng-hide="$ctrl.hideSelectedFonts">
-					<li>
-						<label for="main-font">
-							<p class="side-menu__title -h6">MAIN FONT</p>
-							<input class="side-menu__input -h2" type="text" id="main-font" ng-model="$root.fonts.primary">
-						</label>
-					</li>
-					<span class="side-menu__font-switch"
-						ng-click="$ctrl.switchFonts()">
-						<i class="fa fa-exchange fa-rotate-90"></i>
-					</span>
-					<li>
-						<label for="secondary-font">
-							<p class="side-menu__title -h6">SECONDARY FONT</p>
-							<input class="side-menu__input -h2" type="text" id="secondary-font" ng-model="$root.fonts.secondary">
-						</label>
-					</li>
-				</ul>
+				<ng-include src="'components/ui/partials/font-select.html'"></ng-include>
 			</li>
 
 			<li>
-				<p class="-h2 side-menu__title side-menu__title--collapsable" ng-click="$ctrl.hideColorPallete = !$ctrl.hideColorPallete">Color pallette <span><i class="fa" ng-class="'fa-chevron-' + ($ctrl.hideColorPallete ? 'down' : 'up')"></i></span></p>
-				<ul class="side-menu__selected-colors"
-					ng-hide="$ctrl.hideColorPallete">
-					<li>
-						<div ng-style="{ 'background-color': '#' + $root.colors.primary }"></div>
-						<span>#</span>
-						<input class="side-menu__input side-menu__input--color" type="text" ng-model="$root.colors.primary">
-					</li>
-					<li>
-						<div ng-style="{ 'background-color': '#' + $root.colors.secondary }"></div>
-						<span>#</span>
-						<input class="side-menu__input side-menu__input--color" type="text" ng-model="$root.colors.secondary">
-					</li>
-					<li>
-						<div ng-style="{ 'background-color': '#' + $root.colors.tertiary }"></div>
-						<span>#</span>
-						<input class="side-menu__input side-menu__input--color" type="text" ng-model="$root.colors.tertiary">
-					</li>
-				</ul>
+				<ng-include src="'components/ui/partials/color-select.html'"></ng-include>
 			</li>
 
 			<li class="ui-schemes">
-				<p class="-h2 side-menu__title side-menu__title--collapsable" ng-click="$ctrl.hideSchemes = !$ctrl.hideSchemes">Schemes <span><i class="fa" ng-class="'fa-chevron-' + ($ctrl.hideSchemes ? 'down' : 'up')"></i></span></p>
-				<ul class="ui-schemes__list"
-					ng-hide="$ctrl.hideSchemes">
-					<li class="ui-schemes__scheme"
-						ng-click="$ctrl.setScheme( scheme )"
-						ng-repeat="scheme in $ctrl.schemes">
-						<p class="ui-schemes__font -h6">{{ scheme.primaryFont }}</p>
-						<p class="ui-schemes__font -h6">{{ scheme.secondaryFont }}</p>
-						<ul class="ui-schemes__colors">
-							<li ng-style="{ 'background-color' : '#' + scheme.primaryColor}"></li>
-							<li ng-style="{ 'background-color' : '#' + scheme.secondaryColor}"></li>
-							<li ng-style="{ 'background-color' : '#' + scheme.tertiaryColor}"></li>
-						</ul>
-						<span class="ui-schemes__delete" ng-click="$ctrl.deleteScheme( $index )"><i class="fa fa-close"></i></span>
-					</li>
-
-					<li class="ui-schemes__scheme"
-						ng-click="$ctrl.saveCurrentScheme()">
-						<span class="ui-schemes__add"><i class="fa fa-plus"></i></span>
-					</li>
-				</ul>
+				<ng-include src="'components/ui/partials/schemes.html'"></ng-include>
 			</li>
 
 			<li>
-				<p class="-h2 side-menu__title side-menu__title--collapsable" ng-click="$ctrl.hideActions = !$ctrl.hideActions">Actions <span><i class="fa" ng-class="'fa-chevron-' + ($ctrl.hideActions ? 'down' : 'up')"></i></span></p>
-				<ul class="ui__actions"
-					ng-hide="$ctrl.hideActions">
-					<li ng-click="$ctrl.getShareableUrl()">
-						<span><i class="fa fa-share"></i></span>
-						<p>Share current scheme</p>
-					</li>
-					<li ng-click="$ctrl.getShareableSchemes()">
-						<span><i class="fa fa-list-ul"></i></span>
-						<p>Share saved schemes</p>
-					</li>
-					<li ng-click="$ctrl.showAddSchemesModal = true">
-						<span><i class="fa fa-list-ul"></i></span>
-						<p>Add schemes</p>
-					</li>
-					<li>
-						<span><i class="fa fa-share-alt"></i></span>
-						<p>Share on social</p>
-					</li>
-				</ul>
+				<ng-include src="'components/ui/partials/actions.html'"></ng-include>
 			</li>
+			
 		</ul>
 
 		<footer>
 			<span>Developed by <a href="http://ohsebastian.com" target="_blank">Sebastián Holgado</a></span>
 		</footer>
 	</nav>
+
 
 	<modal title="About FontRun" show-modal="$ctrl.showAboutModal">
 		<p>FontRun is a tool to quickly try, test and share different fonts and different colors with preloaded themes that simulate the latest trends in design.</p>
@@ -151,7 +78,7 @@
 
 	<modal title="Add schemes" show-modal="$ctrl.showAddSchemesModal">
 		<p>Paste the code below and press the button</p>
-		<textarea name="name" rows="8" cols="80" ng-model="$ctrl.schemesString"></textarea>
+		<textarea class="ui__textarea" name="name" rows="8" cols="80" ng-model="$ctrl.schemesString"></textarea>
 		<span class="fr-button utils__mt--lg"
 			ng-click="$ctrl.addSchemes()">
 			<em>Add schemes</em>
