--- a/app/styles/themes/theme-agnostic.scss
+++ b/app/styles/themes/theme-agnostic.scss
@@ -218,7 +218,7 @@ body {
 	background-color: $theme-gray-light;
 	border-bottom: 5px solid var(--primary-color);
 
-	.container .wrapper {
+	.section__container .wrapper {
 		overflow: hidden;
 		padding: 15px;
 		border-radius: 7px;
