--- a/docs/components/home/partials/home-header.html
+++ b/docs/components/home/partials/home-header.html
@@ -1,17 +1,11 @@
 <header id="home-header">
 	<div class="header__overlay"></div>
-	<div class="container">
+	<div class="section__container">
+		<h1 class="header__title">This is some text</h1>
+		<p class="header__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptas, libero, unde, natus, facilis neque deserunt adipisci optio officiis iste quam eum nulla nihil consequuntur aut.</p>
 
-		<div class="row">
-			<div class="col-md-12">
-
-				<h1 class="header__title">This is some text</h1>
-				<p class="header__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptas, libero, unde, natus, facilis neque deserunt adipisci optio officiis iste quam eum nulla nihil consequuntur aut.</p>
-
-				<span class="section__button">
-					<span class="font__primary">Go for it</span>
-				</span>
-			</div>
-		</div>
+		<span class="section__button">
+			<span class="font__primary">Go for it</span>
+		</span>
 	</div>
-</header> 
+</header>
