--- a/docs/components/home/partials/home-nav.html
+++ b/docs/components/home/partials/home-nav.html
@@ -1,5 +1,5 @@
 <nav id="home-nav">
-	<div class="nav__container container">
+	<div class="nav__container section__container">
 		<div class="nav__logo">
 			<a href="#home-nav" class="font__primary">fontRun</a>
 		</div>
@@ -14,4 +14,4 @@
 		</ul>
 
 	</div>
-</nav> 
+</nav>
