--- a/app/components/ui/_ui.scss
+++ b/app/components/ui/_ui.scss
@@ -17,3 +17,4 @@ $fr-font-primary: 'Work Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 @import "styles/ui-side-menu";
 @import "styles/ui-schemes";
 @import "styles/ui-actions";
+@import "styles/ui-keys";
