--- a/app/components/ui/partials/actions.html
+++ b/app/components/ui/partials/actions.html
@@ -23,6 +23,15 @@
 	<popup label="schemeShareCurrent"
 		title="Current scheme copied to clipboard"
 		description="Now you can share the url with someone else. Paste it in the address bar."
+	></popup>
 
+	<popup label="schemeShareAll"
+		title="All schemes copied to clipboard"
+		description="Now you can share the code with someone else. Paste it in the add schemes text field."
+	></popup>
+
+	<popup label="schemeShareError"
+		title="There was an error"
+		description="The code copied was invalid."
 	></popup>
 </div>
