--- a/docs/components/home/partials/home-versus.html
+++ b/docs/components/home/partials/home-versus.html
@@ -1,7 +1,7 @@
 <div id="fonts-versus">
 	<div class="versus__wrapper">
-		<span class="versus__primary font__primary">{{ fonts.primary | fontName }}</span>
+		<span class="versus__primary font__primary">{{ fonts.primary }}</span>
 		<span class="versus__tag"><span>vs</span></span>
-		<span class="versus__secondary font__secondary">{{ fonts.secondary | fontName }}</span>
+		<span class="versus__secondary font__secondary">{{ fonts.secondary }}</span>
 	</div>
 </div>
